--- a/.gitignore
+++ b/.gitignore
@@ -41,3 +41,14 @@ __screenshots__/
 # System files
 .DS_Store
 Thumbs.db
+
+# Firebase
+.firebase/
+firebase-debug.log
+firestore-debug.log
+ui-debug.log
+
+# Environment files with sensitive data
+# Uncomment these if you want to keep credentials out of git
+# /src/environments/environment.ts
+# /src/environments/environment.prod.ts
