--- a/package.json
+++ b/package.json
@@ -5,9 +5,14 @@
     "ng": "ng",
     "start": "ng serve",
     "build": "ng build",
+    "build:prod": "ng build --configuration production",
     "watch": "ng build --watch --configuration development",
     "test": "ng test",
-    "serve:ssr:shortlet-connect": "node dist/shortlet-connect/server/server.mjs"
+    "serve:ssr:shortlet-connect": "node dist/shortlet-connect/server/server.mjs",
+    "firebase:login": "firebase login",
+    "firebase:deploy": "npm run build:prod && firebase deploy",
+    "firebase:deploy:hosting": "npm run build:prod && firebase deploy --only hosting",
+    "firebase:deploy:rules": "firebase deploy --only firestore:rules,storage:rules"
   },
   "prettier": {
     "printWidth": 100,
@@ -26,12 +31,14 @@
     "@angular/common": "^20.3.0",
     "@angular/compiler": "^20.3.0",
     "@angular/core": "^20.3.0",
+    "@angular/fire": "^20.0.1",
     "@angular/forms": "^20.3.0",
     "@angular/platform-browser": "^20.3.0",
     "@angular/platform-server": "^20.3.0",
     "@angular/router": "^20.3.0",
     "@angular/ssr": "^20.3.6",
     "express": "^5.1.0",
+    "firebase": "^11.10.0",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0"
   },
