--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
   },
   "private": true,
   "dependencies": {
+    "@angular/animations": "^20.3.7",
     "@angular/common": "^20.3.0",
     "@angular/compiler": "^20.3.0",
     "@angular/core": "^20.3.0",
@@ -37,6 +38,7 @@
     "@angular/platform-server": "^20.3.0",
     "@angular/router": "^20.3.0",
     "@angular/ssr": "^20.3.6",
+    "@fortawesome/fontawesome-free": "^7.1.0",
     "express": "^5.1.0",
     "firebase": "^11.10.0",
     "rxjs": "~7.8.0",
